[project]
name = "qet"
version = "0.1.0"
description = "A meta package manager for Linux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "toml>=0.10.2",
    "rich>=13.0.0",
]

[project.scripts]
qet = "qet.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
